--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
     crossorigin="anonymous"
   />
-    <title>La Bodeguita</title>
+    <title>Brebajes Magicos</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
